--- a/requirements.txt
+++ b/requirements.txt
@@ -3,11 +3,15 @@ pandas
 numpy
 pymongo
 certifi
-pymongo[srv]==3.6
+pymongo[srv]
 scikit-learn
 dill
 pyaml
 mlflow
+dagshub
+fastapi
+uvicorn
+
 
 
 ##-e .
